fixed height overflow with menu

--- a/public/components/App.styl
+++ b/public/components/App.styl
@@ -17,6 +17,13 @@ body
     min-height 100vh
 
 #app-container
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     .container
         -webkit-overflow-scrolling: touch;
